<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="16dp">

    <TextView
        android:id="@+id/resultDisplay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:padding="16dp"
        android:text="@string/_0_"
        android:textColor="#000000"
        android:textSize="64sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onACClick"
                android:text="@string/ac"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onSignClick"
                android:text="@string/backspace"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onPercentClick"
                android:text="@string/percent"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onOperatorClick"
                android:text="@string/division"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />
        </TableRow>

        <TableRow>

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_7"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_8"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_9"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onOperatorClick"
                android:text="@string/multiplication"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />
        </TableRow>

        <TableRow>

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_4"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_5"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_6"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onOperatorClick"
                android:text="@string/minus"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />
        </TableRow>

        <TableRow>

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_1"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_2"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_3"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onOperatorClick"
                android:text="@string/plus"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />
        </TableRow>

        <TableRow>

            <Button
                style="@style/CalcButton.Orange"
                android:gravity="center"
                android:onClick="onActionClick"
                android:text="@string/exit"
                android:textColor="#EF6C00"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onNumberClick"
                android:text="@string/_0"
                android:textSize="34sp"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

            <Button
                style="@style/CalcButton"
                android:gravity="center"
                android:onClick="onDecimalClick"
                android:text="@string/decimal"
                android:textSize="34sp"
                tools:ignore="VisualLintButtonSize" />

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/CalcButton.Equal"
                android:background="@drawable/equal_button_shape"
                android:gravity="center"
                android:onClick="onEqualsClick"
                android:textSize="34sp" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/equal"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>